force-app/main/default/objects/MaritzCX__Survey__c/MaritzCX__Survey__c.object-meta.xml
<CustomObject>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>