force-app/main/default/objects/MaritzCX__Survey__c/fields/MaritzCX__Key_Metric_4_Chart__c.field-meta.xml
<CustomField>
    <fullName>MaritzCX__Key_Metric_4_Chart__c</fullName>
    <label>Key Metric 04 Chart</label>
    <length>255</length>
    <type>Text</type>
</CustomField>