force-app/main/default/objects/MaritzCX__Survey__c/fields/MaritzCX__KM24_Min__c.field-meta.xml
<CustomField>
    <fullName>MaritzCX__KM24_Min__c</fullName>
    <label>Key Metric 24- Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>