force-app/main/default/objects/MaritzCX__Survey__c/fields/MaritzCX__KM25_Min__c.field-meta.xml
<CustomField>
    <fullName>MaritzCX__KM25_Min__c</fullName>
    <label>Key Metric 25- Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>