force-app/main/default/objects/MaritzCX__Survey__c/fields/MaritzCX__KM6_Goal__c.field-meta.xml
<CustomField>
    <fullName>MaritzCX__KM6_Goal__c</fullName>
    <label>Key Metric 06- Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>