force-app/main/default/objects/MaritzCX__Survey__c/listViews/MaritzCX__All.listView-meta.xml
<ListView>
    <fullName>MaritzCX__All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>